Upgraded to mdk 52.0.19 for mc 1.20.1